# meshkah

./: .editorconfig  .gitattributes  .gitignore  README.md  requirements.txt
docs/: README.md  system-architecture.md
launch/: full_sim.launch.py  gz_pose_bridge.launch.py  phase1.launch.py
scripts/: auto_fly_cuas_field.py  build_in_venv.sh  calibrate_camera.py  install_ardupilot_gazebo.sh  install_ardupilot_sitl.sh  install_gazebo_harmonic.sh  install_sim_stack.sh  preflight_check.py  start_full_scenario.sh  start_gazebo_cuas_field.sh  start_sim.sh  start_sitl.sh
src/cuas_msgs/: CMakeLists.txt  package.xml
src/cuas_msgs/msg/: DetectionReport.msg  GlobalTrack.msg
src/fusion/: package.xml  setup.py
src/fusion/fusion/: ekf.py  fusion_node.py  lora_transport.py  modal_vote.py  triangulation.py
src/metrics/: package.xml  setup.py
src/metrics/metrics/: evaluator.py
src/node_sim/: package.xml  setup.cfg  setup.py
src/node_sim/node_sim/: __init__.py  cinematic_cam_controller.py  drone_truth_publisher.py  gazebo_bridge.py  gz_pose_relay.py  node_acoustic.py  node_rf.py  node_rgb.py  node_thermal.py  sensor_model.py  track_viz_node.py
src/node_sim/resource/: node_sim
src/sim_world/worlds/: cuas_field.world
tests/: test_ekf.py  test_triangulation.py
