<?xml version="1.0"?>
<package format="3">
  <name>fusion</name>
  <version>0.1.0</version>
  <description>Fusion engine package for meshkah CUAS-SIM.</description>
  <maintainer email="research@example.com">meshkah</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>cuas_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
